--- a/src/traho.scss
+++ b/src/traho.scss
@@ -2,7 +2,9 @@
     --traho-font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     --traho-body-font-size: 1.2rem;
     --traho-body-line-height: 1.5;
-
+/**
+ * Heading sizes
+ */
     --traho-1-heading: 2.5rem;
     --traho-2-heading: 3rem;
     --traho-3-heading: 3.5rem;
@@ -11,7 +13,9 @@
     --traho-6-heading: 5rem;
     --traho-7-heading: 5.5rem;
     --traho-8-heading: 6rem;
-
+/**
+ * Spacing sizes (margins and paddings)
+ */
     --traho-1-spacing: 0.50rem;
     --traho-2-spacing: 0.75rem;
     --traho-3-spacing: 1rem;
@@ -23,7 +27,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-
+    // 
 }
 
 
@@ -159,7 +163,7 @@ $spacings: 1, 2, 3, 4, 5, 6, 7, 8;
 $lhs: 1, 2, 3, 4, 5;
 @each $lh in $lhs {
     .lh-#{$lh} {
-        line-height: #{$lh};
+        line-height: #{1 * ($lh)};
     }
 }
 
@@ -176,7 +180,6 @@ $alignments: center, start, end, flex-start, flex-end, normal, baseline,
         align-content: #{$alignment}
     }
 }
-
 $text_alignments: left, center, right;
 @each $text_alignment in $text_alignments {
     .text-align-#{$text_alignment} {
@@ -194,7 +197,6 @@ $displays: block, inline, inline-block, flex, inline-flex, grid, inline-grid, fl
         display: $display;
     }
 }
-
 $alphas: 9,8,7,6,5,4,3,2,1,0;
 @each $alpha in $alphas {
     .opacity-#{$alpha} {
@@ -203,5 +205,44 @@ $alphas: 9,8,7,6,5,4,3,2,1,0;
         } @else {
             opacity: $alpha;
         }
+    }
+}
+
+/**
+ * Basic named colors exposed as classes
+ * for setting a background color
+ */
+$bgs: black, blue, brown, cyan, fuchsia, gray, green, lime, navy, orange,
+      purple, pink, red, silver, teal, white, yellow;
+@each $bg in $bgs {
+    .bg-#{$bg} {
+        background-color: $bg;
+    }
+}
+
+/**
+ * Extended named colors exposed as classes
+ * for setting a background color
+ */
+ $extbgs: aliceblue, antiquewhite, aqua, azure, beige, bisque, blanchedalmond, blueviolet,
+          burlywood, cadetblue, chartreuse, chocolate, coral, cornflowerblue, cornsilk, crimson,
+          cyan, darkblue, darkcyan, darkgoldenrod, darkgray, darkgreen, darkgrey, darkolivegreen,
+          darkorange, darkorchid, darkred, darkseagreen, darkslateblue, darkslategray,
+          darkturquoise, darkviolet, deeppink, deepskyblue, dimgray, dodgerblue, firebrick,
+          floralwhite, forestgreen, gainsboro, ghostwhite, gold, goldenrod, honeydew, hotpink
+          indianred, indigo, ivory, khaki, lavender, lavenderblush, lawngreen, lemonchiffon,
+          lightblue, lightcoral, lightcyan, lightgoldenrodyellow, lightgray, lightgreen,
+          lightpink, lightsalmon, lightseagreen, lightskyblue, lightslategray, lightsteelblue,
+          lightyellow, lime, limegreen, linen, magenta, maroon, mediumaquamarine, mediumblue,
+          mediumorchid, mediumpurple, mediumseagreen, mediumslateblue, mediumspringgreen,
+          mediumturquoise, mediumvioletred, midnightblue, mintcream, mistyrose, moccasin, navajowhite,
+          oldlace, olive, olvedrab, orangered, orchid, palegoldenrod, palegreen, paleturquoise,
+          palevioletred, papayawhip, peachpuff, peru, plum, powderblue, rosybrown, royalblue,
+          saddlebrown, salmon, sandybrown, seagreen, seashell, sienna, silver, skyblue, slateblue,
+          slategray, snow, springgreen, steelblue, tan, teal, thistle, tomato, turquoise, violet,
+          wheat, white, whitesmoke, yellow, yellogreen;
+@each $extbg in $extbgs {
+    .bg-#{$extbg} {
+        background-color: $extbg;
     }
 }
